# IMU_Calib_Util

./: .gitignore  README.md
config/: config.yaml  imu_generate.yaml  simu_config.yaml
cpp/: CMakeLists.txt
cpp/include/: allan_variance_computor.h  data_reader.h  debug.h  imu_meas.h  type.h  yaml_parser.h
cpp/simulator/: CMakeLists.txt
cpp/simulator/include/: imu_simulator.h
cpp/simulator/src/: imu_simulator.cc  main.cc
cpp/src/: allan_variance_computor.cc  data_reader.cc  imu_meas.cc  main.cc  yaml_parser.cc
docs/: IMU Model.md  calibration.md
scripts/: analysis.py  analysis_cfg.yaml  simu_analysis_cfg.yaml
